--- a/package.json
+++ b/package.json
@@ -3,5 +3,10 @@
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
     "handlebars": "^4.7.7"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/express-handlebars": "^6.0.0",
+    "@types/node": "^17.0.10"
   }
 }
