--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "removeComments": true,
     "preserveConstEnums": true,
     "sourceMap": true,
-    "target": "es2021"
+    "target": "es2021",
+    "outDir": "bin"
   },
   "files": [
     "server.ts"
