Added css, simplify header HTML, fix relative path bug in server

--- a/.gitignore
+++ b/.gitignore
@@ -57,7 +57,8 @@ flycheck_*.el
 # End of https://www.toptal.com/developers/gitignore/api/emacs
 
 res/
-public/
+public/res/
+public/files/
 files/
 
 
