--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/express-handlebars": "^6.0.0",
-    "@types/node": "^17.0.10"
+    "@types/node": "^17.0.10",
+    "source-map-support": "^0.5.21"
   }
 }
