--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/express": "^4.17.13",
     "@types/express-handlebars": "^6.0.0",
     "@types/node": "^17.0.10",
+    "shadow-cljs": "^2.16.12",
     "source-map-support": "^0.5.21"
   }
 }
