Officially move site content out of the repo.

--- a/.gitignore
+++ b/.gitignore
@@ -208,3 +208,4 @@ dist
 # End of https://www.toptal.com/developers/gitignore/api/node
 # Typescript output directory.
 bin/
+views/partials/content
