--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -1,5 +1,15 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  body: MyText
+  title: MyString
+  description: MyString
+  where: MyString
+  url: MyString
 
 two:
+  body: MyText
+  title: MyString
+  description: MyString
+  where: MyString
+  url: MyString
