Let rails handle errors, more front page items

--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,5 @@ build-iPhoneSimulator/
 /app/assets/images
 /public/favicon32x32.ico
 # End of https://www.toptal.com/developers/gitignore/api/yarn
+
+/app/orgs
