--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
+  "name": "site",
+  "version": "0.0.1",
+  "private": true,
+  "devDependencies": {
+    "shadow-cljs": "2.26.2"
+  },
   "dependencies": {
-    "typescript": "^4.5.5"
+    "express": "^4.18.2",
+    "express-handlebars": "^7.1.2"
   }
 }
